# todo-crud-hs

./: README.md  crud-todo.cabal  package.yaml  postgres-run.sh
app/: Main.hs
src/: Db.hs  Repository.hs  Service.hs  Types.hs
