cabal-version: 2.2

name:           crud-todo
version:        0.1.0.0
author:         ishto
build-type:     Simple

executable crud-todo-exe
  main-is: Main.hs
  hs-source-dirs: app
  -- ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , scotty
    , persistent
    , persistent-postgresql
    , persistent-template
    , aeson
    , monad-logger
    , time
    , http-types
    , text
  default-language: Haskell2010
