cabal-version: 2.2

name:           crud-todo
version:        0.1.0.0
author:         ishto
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Db
    Repository
    Service
    Types
  build-depends:
    base >=4.7 && <5
    , scotty
    , persistent
    , persistent-postgresql
    , persistent-template
    , aeson
    , monad-logger
    , time
    , http-types
    , resource-pool
    , text
  default-language: Haskell2010

executable crud-todo-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.7 && <5
    , crud-todo
    , scotty
    , persistent
    , persistent-postgresql
    , persistent-template
    , aeson
    , monad-logger
    , time
    , http-types
    , resource-pool
    , text
  default-language: Haskell2010
